hphp/hack/test/typecheck/reactive/mutable_or_immutable3.php.exp
File "mutable_or_immutable3.php", line 6, characters 19-19:
The method f is annotated with <<__MaybeMutable> attribute, or has this attribute on one of parameters so it must be marked reactive. (NastCheck[3071])
